# switchboard-plug-applications

./: .travis.yml  CMakeLists.txt  README.md  meson.build
.github/workflows/: gettext.yml  main.yml
data/: applications.appdata.xml.in  applications.gresource.xml  applications.metainfo.xml.in  io.elementary.switchboard-plug-applications.appdata.xml  io.elementary.switchboard-plug-applications.appdata.xml.in  io.elementary.switchboard-plug-applications.desktop.in  io.elementary.switchboard.applications.appdata.xml.in  meson.build  pantheon-plug-applications.desktop
debian/: changelog  control  copyright  rules
po/: CMakeLists.txt  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  applications-plug.pot  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+161 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+159 more)
src/: CMakeLists.txt  Plug.vala  Sidebar.vala  meson.build
src/Defaults/: DefaultPlug.vala  DefaultsPage.vala  Utils.vala
src/Permissions/: Application.vala  FlatpakApplication.vala  FlatpakManager.vala  PermissionsPlug.vala
src/Permissions/Backend/: App.vala  AppManager.vala  Application.vala  FlatpakApplication.vala  FlatpakManager.vala  Permission.vala  PermissionDescription.vala  PermissionManager.vala  PermissionSettings.vala  PermissionStore.vala
src/Permissions/Widgets/: AppEntry.vala  AppSettingsView.vala  BooleanSetting.vala  PermissionSettingsWidget.vala  Sidebar.vala  SidebarRow.vala
src/Startup/: Controller.vala  Startup.vala  Utils.vala
src/Startup/Backend/: DesktopFileEnumerator.vala  KeyFile.vala  KeyFileFactory.vala  Monitor.vala
src/Startup/Dialogs/: AppChooser.vala
src/Startup/Entities/: AppInfo.vala
src/Startup/Widgets/: AppChooser.vala  AppChooserRow.vala  AppRow.vala  CustomCommandEditor.vala  List.vala  NewAppRow.vala  Scrolled.vala
src/WebSearch/: WebSearch.vala
